updates to the monitor, mainly style

--- a/monitor/index.html
+++ b/monitor/index.html
@@ -21,8 +21,11 @@
 
   <div id="change-wrapper" class="row-item">
     <span class="label">Change</span>
-    <div id="change"></div>
+    <div class="colored" id="change"></div>
   </div>
+</div>
+<div class="row centered">
+  <div class="colored" id="price-usd"></div>
 </div>
 <script type="application/javascript" src="main.js"></script>
 </body>
